# ramp

./: .gitignore  GEMINI.md  README.md  settings.gradle  settings.gradle.kts
app/: build.gradle  build.gradle.kts
app/src/androidTest/java/: SettingsViewModelTest.kt
app/src/androidTest/java/com/raaveinm/chirro/data/: DatabaseManagerTest.kt  TrackDaoTest.kt  TrackDatabaseIntegrationTest.kt
app/src/androidTest/java/com/raaveinm/ramp/: ExampleInstrumentedTest.java  ExampleInstrumentedTest.kt
app/src/androidTest/kotlin/: PlayerControlsTest.kt  PlayerViewModelTest.kt  PlaylistInteractionTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_core.cpp  shuffle-lib.cpp  shuffle_core.h
app/src/main/cpp/dsp/: equalizer.cpp  equalizer.h  speed_shifter.cpp
app/src/main/cpp/visualizer/: fft_processor.cpp  fft_processor.h
app/src/main/java/com/raaveinm/chirro/: ChirroApplication.kt  MainActivity.kt
app/src/main/java/com/raaveinm/chirro/data/: AppContainer.kt  ChirroApplication.kt  Converter.kt  DatabaseManager.kt  MediaResolve.kt  TrackDao.kt  TrackDatabase.kt  TrackInfo.kt  TrackRepository.kt
app/src/main/java/com/raaveinm/chirro/domain/: ChirroAudioProcessor.kt  Constants.kt  Eggs.kt  Helpers.kt  PlaybackNotificationProvider.kt  PlaybackService.kt  PlayerService.kt  RetrieveMedia.kt  Shuffle.kt  SleepTimer.kt
app/src/main/java/com/raaveinm/chirro/ui/: MainScreen.kt
app/src/main/java/com/raaveinm/chirro/worker/: ParserWorker.kt  WorkerUtils.kt
app/src/main/java/com/raaveinm/ramp/: Library.java  MainActivity.java  MainActivity.kt  ManagmentActivity.java  Player.java  PlayerFragment.java  SettingsActivity.java  onPlay.java
app/src/main/java/com/raaveinm/ramp/ext/: ExtMethods.java  notes.md  onPlay.java
app/src/main/java/com/raaveinm/ramp/services/: ChirroPlayer.kt  ErrorHandling.kt
app/src/main/java/com/raaveinm/ramp/snippets/: ContentResolver.kt  TrackInfo.kt  VideoController.kt
app/src/main/java/com/raaveinm/ramp/viewmodels/: ViewModel.kt
app/src/main/res/drawable/: background_butt.xml  sad.xml
app/src/main/res/drawable-hdpi/: playlist_add_check.xml
app/src/main/res/drawable-mdpi/: add.xml  fast_forward.xml  fast_forward_20px.xml  fast_rewind.xml  fast_rewind_20px.xml  menu_20px.xml  pause.xml  play_arrow.xml  play_arrow_20px.xml  shuffle.xml  skip_next_20px.xml  skip_previous_20px.xml  subscriptions_20px.xml
app/src/main/res/layout/: activity_main.xml  activity_managment.xml  fragment_player.xml  settings_activity.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimension.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-de-rDE/: strings.xml
app/src/main/res/values-fr-rFR/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-pl-rPL/: strings.xml
app/src/main/res/values-ru-rRU/: strings.xml
app/src/main/res/values-uk-rUA/: strings.xml
app/src/main/res/xml/: locales_config.xml
app/src/test/java/com/raaveinm/ramp/: ExampleUnitTest.java  ExampleUnitTest.kt
chirroSRC/: settings.gradle.kts
chirroSRC/app/: build.gradle.kts
chirroSRC/app/src/main/java/com/raaveinm/chirro/: MainActivity.kt
chirroSRC/app/src/main/res/values/: strings.xml
chirroSRC/gradle/: libs.versions.toml
chirroSRC/gradle/wrapper/: gradle-wrapper.properties
core/audioengine/: build.gradle.kts
core/audioengine/src/main/cpp/: CMakeLists.txt  audio_core.cpp  shuffle-lib.cpp
core/audioengine/src/main/cpp/dsp/: equalizer.cpp  equalizer.h  speed_shifter.h
core/audioengine/src/main/cpp/visualizer/: fft_processor.cpp  fft_processor.h
core/audioengine/src/test/cpp/: equalizer_test.cpp  fft_test.cpp
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+129 files in other folders)
